--- a/iBach/iBach/Classes/Modules/Login/Login.storyboard
+++ b/iBach/iBach/Classes/Modules/Login/Login.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TPR-Bv-Vfo">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,39 +10,95 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="04a-vd-bZQ">
+        <!--Login-->
+        <scene sceneID="eO6-Lo-rJH">
             <objects>
-                <viewController id="j9I-kj-H2N" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="I8V-JR-LGM">
+                <viewController storyboardIdentifier="Login" useStoryboardIdentifierAsRestorationIdentifier="YES" id="eq3-3D-XWs" customClass="LoginViewController" customModule="iBach" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Nc-nf-lYI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Zj-rY-rSe">
+                                <rect key="frame" x="0.0" y="116" width="375" height="551"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eSG-ZW-0Cp">
+                                        <rect key="frame" x="8" y="8" width="359" height="535"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TSK-K1-cCG">
+                                                <rect key="frame" x="0.0" y="27" width="359" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" textContentType="username"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MXq-fc-u1g">
+                                                <rect key="frame" x="0.0" y="65" width="359" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDh-bO-CwN">
+                                                <rect key="frame" x="160" y="103" width="38" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Login"/>
+                                                <connections>
+                                                    <action selector="loginUser:" destination="eq3-3D-XWs" eventType="touchUpInside" id="Pgb-zf-Ya4"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="eSG-ZW-0Cp" firstAttribute="trailing" secondItem="5Zj-rY-rSe" secondAttribute="trailingMargin" id="1wk-Qk-Xwq"/>
+                                    <constraint firstItem="eSG-ZW-0Cp" firstAttribute="centerX" secondItem="5Zj-rY-rSe" secondAttribute="centerX" id="9Ab-ix-24B"/>
+                                    <constraint firstItem="eSG-ZW-0Cp" firstAttribute="centerY" secondItem="5Zj-rY-rSe" secondAttribute="centerY" id="DKy-k7-cJj"/>
+                                    <constraint firstItem="eSG-ZW-0Cp" firstAttribute="bottom" secondItem="5Zj-rY-rSe" secondAttribute="bottomMargin" id="dpU-St-UUu"/>
+                                    <constraint firstItem="eSG-ZW-0Cp" firstAttribute="top" secondItem="5Zj-rY-rSe" secondAttribute="topMargin" id="hgp-2s-8Ge"/>
+                                    <constraint firstItem="eSG-ZW-0Cp" firstAttribute="leading" secondItem="5Zj-rY-rSe" secondAttribute="leadingMargin" id="tL9-6K-8tP"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="eKh-pL-xyy"/>
+                        <constraints>
+                            <constraint firstItem="5Zj-rY-rSe" firstAttribute="bottom" secondItem="dTd-Wc-q8S" secondAttribute="bottom" id="36m-Dn-iAz"/>
+                            <constraint firstItem="5Zj-rY-rSe" firstAttribute="top" secondItem="dTd-Wc-q8S" secondAttribute="top" id="Bij-gL-QUX"/>
+                            <constraint firstItem="5Zj-rY-rSe" firstAttribute="leading" secondItem="2Nc-nf-lYI" secondAttribute="leading" id="cSK-UR-t0Y"/>
+                            <constraint firstAttribute="trailing" secondItem="5Zj-rY-rSe" secondAttribute="trailing" id="whv-MO-oEF"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="dTd-Wc-q8S"/>
                     </view>
-                    <navigationItem key="navigationItem" id="yjR-v5-tBD"/>
+                    <navigationItem key="navigationItem" title="Login" largeTitleDisplayMode="always" id="zcz-GC-di8"/>
+                    <connections>
+                        <outlet property="buttonLogin" destination="gDh-bO-CwN" id="1gc-Aw-WtT"/>
+                        <outlet property="contentView" destination="eSG-ZW-0Cp" id="TF5-D2-0Og"/>
+                        <outlet property="scrollView" destination="5Zj-rY-rSe" id="XvM-i1-Ubg"/>
+                        <outlet property="textFieldPassword" destination="MXq-fc-u1g" id="5Id-XQ-QDe"/>
+                        <outlet property="textFieldUsername" destination="TSK-K1-cCG" id="5Pq-hM-XOR"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gbC-PT-L8w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dgx-w9-msS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="248.80000000000001" y="-92.203898050974516"/>
+            <point key="canvasLocation" x="-79.200000000000003" y="-314.39280359820094"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="Jz0-C5-fpg">
+        <scene sceneID="1UN-Ot-HRm">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NxE-dG-b3H" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TPR-Bv-Vfo" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rqF-bU-46p">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="QyU-eE-R3y">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="j9I-kj-H2N" kind="relationship" relationship="rootViewController" id="FDr-IW-Yll"/>
+                        <segue destination="eq3-3D-XWs" kind="relationship" relationship="rootViewController" id="hkl-Uh-ik5"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Dcf-Ps-WKn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XrL-mP-uJb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-690.39999999999998" y="-92.203898050974516"/>
+            <point key="canvasLocation" x="-1018.4" y="-314.39280359820094"/>
         </scene>
     </scenes>
 </document>
