--- a/iBach/iBach/Supporting Files/Base.lproj/Main.storyboard
+++ b/iBach/iBach/Supporting Files/Base.lproj/Main.storyboard
@@ -18,10 +18,34 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
+                    <connections>
+                        <segue destination="b9n-aa-tGS" kind="relationship" relationship="viewControllers" id="QIr-Wo-Y00"/>
+                        <segue destination="hca-FV-2dh" kind="relationship" relationship="viewControllers" id="r1X-Ap-iJI"/>
+                    </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G8T-kc-Rh2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-58" y="-236"/>
+        </scene>
+        <!--AccountNav-->
+        <scene sceneID="3bR-Th-bMb">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Account" referencedIdentifier="AccountNav" id="b9n-aa-tGS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="G8k-tF-0hk"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dEh-ME-wfD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="817" y="-449"/>
+        </scene>
+        <!--MusicNav-->
+        <scene sceneID="g4r-26-JBP">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Music" referencedIdentifier="MusicNav" id="hca-FV-2dh" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Xyw-Up-ojx"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iNT-Ki-kR3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="906" y="-235"/>
         </scene>
     </scenes>
 </document>
