--- a/iBach/iBach/iBach/Supporting Files/Base.lproj/Main.storyboard
+++ b/iBach/iBach/iBach/Supporting Files/Base.lproj/Main.storyboard
@@ -19,8 +19,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="b9n-aa-tGS" kind="relationship" relationship="viewControllers" id="QIr-Wo-Y00"/>
                         <segue destination="hca-FV-2dh" kind="relationship" relationship="viewControllers" id="r1X-Ap-iJI"/>
+                        <segue destination="YCi-aC-pvJ" kind="relationship" relationship="viewControllers" id="cvp-tQ-rFh"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G8T-kc-Rh2" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -28,14 +28,14 @@
             <point key="canvasLocation" x="-58" y="-236"/>
         </scene>
         <!--AccountNav-->
-        <scene sceneID="3bR-Th-bMb">
+        <scene sceneID="gfI-Aa-zM1">
             <objects>
-                <viewControllerPlaceholder storyboardName="Account" referencedIdentifier="AccountNav" id="b9n-aa-tGS" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="G8k-tF-0hk"/>
+                <viewControllerPlaceholder storyboardName="Account" referencedIdentifier="AccountNav" id="YCi-aC-pvJ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="uGu-oM-ZY2"/>
                 </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dEh-ME-wfD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F3y-ey-EEt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="817" y="-449"/>
+            <point key="canvasLocation" x="804" y="-434"/>
         </scene>
         <!--MusicNav-->
         <scene sceneID="g4r-26-JBP">
