--- a/iBach/iBach/iBach/Supporting Files/Base.lproj/Main.storyboard
+++ b/iBach/iBach/iBach/Supporting Files/Base.lproj/Main.storyboard
@@ -21,6 +21,7 @@
                     <connections>
                         <segue destination="hca-FV-2dh" kind="relationship" relationship="viewControllers" id="r1X-Ap-iJI"/>
                         <segue destination="b9n-aa-tGS" kind="relationship" relationship="viewControllers" id="QIr-Wo-Y00"/>
+                        <segue destination="N39-yz-7oG" kind="relationship" relationship="viewControllers" id="ife-b5-laT"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G8T-kc-Rh2" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -46,6 +47,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iNT-Ki-kR3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="906" y="-235"/>
+        </scene>
+        <!--SettingsNav-->
+        <scene sceneID="tds-Ya-rxR">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Settings" referencedIdentifier="SettingsNav" id="N39-yz-7oG" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="9X9-LF-IhQ"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CeW-MN-kVf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="917" y="-106"/>
         </scene>
     </scenes>
 </document>
