Napravljeno da se prikazuje save changes button kada je bilo koji field (ime, prezime, email, username) izmijenjen s obzirom na postojeci

--- a/iBach/iBach/iBach/Classes/Modules/Account/Account.storyboard
+++ b/iBach/iBach/iBach/Classes/Modules/Account/Account.storyboard
@@ -67,6 +67,9 @@
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <action selector="emailEdited:" destination="eQq-df-QGg" eventType="editingChanged" id="XE3-MH-XVi"/>
+                                                    </connections>
                                                 </textField>
                                             </subviews>
                                         </tableViewCellContentView>
@@ -95,6 +98,9 @@
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <action selector="firstnameEdited:" destination="eQq-df-QGg" eventType="editingChanged" id="pfd-TI-Ebj"/>
+                                                    </connections>
                                                 </textField>
                                             </subviews>
                                         </tableViewCellContentView>
@@ -119,6 +125,9 @@
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <action selector="lastnameEdited:" destination="eQq-df-QGg" eventType="editingChanged" id="euJ-MJ-Fx5"/>
+                                                    </connections>
                                                 </textField>
                                             </subviews>
                                         </tableViewCellContentView>
